--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ google-api-python-client==2.111.0
 google-auth==2.25.2
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.62.0
+gunicorn==21.2.0
